<resources>
    <string name="app_name">APP_DietaCheck</string>
    <string name="principal_name">Seja Saudável</string>
    <string name="txt_principal">IMC é a sigla para Índice de Massa Corporal que serve para avaliar o peso
        do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal,
        acima ou abaixo do peso desejado.\n\nPreencha os campos de peso e altura para descobrir o seu IMC.</string>
    <string name="label_weight">Peso (Kg)</string>
    <string name="label_height">Altura (cm)</string>
    <string name="label_imc">IMC</string>
    <string name="label_tmb">TMB</string>
    <string name="txt_calculate">Calcular IMC</string>
    <string name="validate">Todos os campos devem ser maiores que 0 (zero)</string>
    <string name="titleIMC">Cálculo de IMC</string>
    <string name="initial_value">0.0</string>
    <string name="txt_result">Seu IMC é:</string>
    <string name="magreza">Magreza</string>
    <string name="normal">Normal</string>
    <string name="sobrepeso">Sobrepeso</string>
    <string name="obesidade">Obesidade</string>
    <string name="obesidade_grave">Obesidade Grave</string>
    <string name="imc_response">Seu IMC é: %1$.2f</string>
    <string name="list_response">Resultado: %1$.2f, data: %2$s</string>
    <string name="save">Salvar</string>
    <string name="sucess_save">Dados salvos com sucesso</string>
    <string name="list_all">Histórico IMC</string>
    <string name="favorite">Favoritos</string>
    <string name="more">Outros</string>
    <string name="appBarScroll">ScrollRecycler\n</string>


</resources>